# backend

./: .gitignore  docker-compose.yml  readme.md
agent/: .gitignore  dockerfile  pyproject.toml
agent/src/: main.py
agent/src/agent/agent_backend/: __init__.py  agent.py  model.py
agent/src/agent/agent_backend/prompts/: __init__.py  system_prompts.py
agent/src/agent/agent_backend/tools/: __init__.py  agent_tool.py  exercise_rag.py  exercise_tool.py  mock_tool.py  users_rag_download_tool.py  users_rag_upload_tool.py
agent/src/agent/config/: config.py  models.py
agent/src/agent/prompts/: __init__.py  system_prompts.py
agent/src/agent/routers/: agent.py
agent/src/agent/server/: request.py
agent/src/agent/utils/: __init__.py  exercise.py  model.py  rag.py
agent/src/server/: __init__.py
backend/: .env  Dockerfile  pyproject.toml  setup.sh
backend/alembic/: env.py
backend/alembic/versions/: 03a65471383d_initial_migration.py  260769184a15_initial_migration.py  2e22b1ce7167_initial_migration.py
backend/src/: main.py
backend/src/backend/config/: config.json  config.py
backend/src/backend/database/scripts/: exercises.json  set_exercises.py
backend/src/backend/database/sqlalchemy/: orm_models.py  session.py
backend/src/backend/database/sqlalchemy/crud/: exercise.py  measurement.py  training.py  user.py
backend/src/backend/minio/: S3Client.py
backend/src/backend/models/: exercise.py  measurement.py  token.py  training.py  user.py
backend/src/backend/routers/: __init__.py  exercise.py  measurement.py  training.py  user.py
backend/src/backend/routers/access/: __init__.py  access.py  auth.py  middleware.py  password.py  signup.py  token.py
rag/: .gitignore  dockerfile  pyproject.toml
rag/src/: main.py
rag/src/metrics/: main.ipynb
rag/src/retriever/: config.py
rag/src/retriever/core/pipelines/: pipeline.py
rag/src/retriever/core/pipelines/requests/: __init__.py  hyde_embedder.py  miniLM_embedder.py
rag/src/retriever/core/pipelines/rerankers/: __init__.py  dry_reranker.py  ms_macro_mini_lm_reranker.py
rag/src/retriever/core/pipelines/retrievers/: __init__.py  batch_quadrant_retriever.py  tag_first_retriever.py  tag_only_retriever.py
rag/src/retriever/core/rags/: __init__.py  cool_rag.py  cool_rag_tag_only.py  hyde_rag.py  simple_rag.py  tag_first_rag.py
rag/src/retriever/generator/: collection_handler.py
rag/src/retriever/routers/: __init__.py  search.py  user.py
rag/src/retriever/scripts/: populate_exercises.py
rag/src/retriever/scripts/exercises/: __init__.py  exercises.py  reader.py  tmp.py
