[project]
name = "bilyaletov-agent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Shebanov", email = "i.shebanov@g.nsu.ru"},
]
dependencies = ["fastapi>=0.121.1", "langgraph>=1.0.0", "google-genai>=1.45.0", "langchain-google-genai>=3.0.0", "dotenv>=0.9.9", "uvicorn>=0.38.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
