[project]
name = "retriever"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Shebanov", email = "vanamokanov8@gmail.com"},
]
dependencies = ["fastapi>=0.119.0", "qdrant-client>=1.15.1", "uvicorn>=0.37.0", "sentence-transformers>=5.1.1", "llama-cpp-python>=0.3.16", "huggingface-hub>=0.36.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start.cmd = "python ./src/main.py"
start.env = {PYTHONPATH = "./src"}

populate_exercises.cmd = "python ./src/retriever/scripts/populate_exercises.py"
populate_exercises.env = {PYTHONPATH = "./src"}
